--- a/OUTPUTS/viz-planes-api.html
+++ b/OUTPUTS/viz-planes-api.html
@@ -20,7 +20,7 @@
       }
     </style>
   </head>
-  <body>
+  <body onLoad="window.scrollTo(0,170)">
   <h1>API Meta data</h1>
     <div>
       <div style="font-weight: bold">API: Sub-Spec [2018-11-03 12:50:43 +0100
