--- a/OUTPUTS/viz-VTEX - Antifraud Provider API-Antifraud Provider-api.html
+++ b/OUTPUTS/viz-VTEX - Antifraud Provider API-Antifraud Provider-api.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-md-6">
       <h3>API Meta data</h3>
-      <div class="font-weight-bold">Source: <a href="https://github.com/grofo/VTEX.git">https://github.com/grofo/VTEX.git</a></div>
+      <div class="font-weight-bold">Source: <a href="https://github.com/alejandra-mendez/openapi.git">https://github.com/alejandra-mendez/openapi.git</a></div>
       <div class="font-weight-bold">OAS File: VTEX - Antifraud Provider API.json</div>
       <div class="font-weight-bold">API Title: Antifraud Provider [2020-05-12 17:14:30 -0300
 ]</div>
