--- a/OUTPUTS/viz-VTEX - Customer Credit API-VTEX - Customer Credit API-api.html
+++ b/OUTPUTS/viz-VTEX - Customer Credit API-VTEX - Customer Credit API-api.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-md-6">
       <h3>API Meta data</h3>
-      <div class="font-weight-bold">Source: <a href="https://github.com/grofo/VTEX.git">https://github.com/grofo/VTEX.git</a></div>
+      <div class="font-weight-bold">Source: <a href="https://github.com/alejandra-mendez/openapi.git">https://github.com/alejandra-mendez/openapi.git</a></div>
       <div class="font-weight-bold">OAS File: VTEX - Customer Credit API.json</div>
       <div class="font-weight-bold">API Title: Customer Credit API [2019-12-30 11:36:48 -0300
 ]</div>
