--- a/OUTPUTS/viz-VTEX - Subscriptions API (v2)-Subscriptions API (v2)-api.html
+++ b/OUTPUTS/viz-VTEX - Subscriptions API (v2)-Subscriptions API (v2)-api.html
@@ -38,7 +38,7 @@
     <div class="row">
       <div class="col-md-6">
       <h3>API Meta data</h3>
-      <div class="font-weight-bold">Source: <a href="https://github.com/grofo/VTEX.git">https://github.com/grofo/VTEX.git</a></div>
+      <div class="font-weight-bold">Source: <a href="https://github.com/alejandra-mendez/openapi.git">https://github.com/alejandra-mendez/openapi.git</a></div>
       <div class="font-weight-bold">OAS File: VTEX - Subscriptions API (v2).json</div>
       <div class="font-weight-bold">API Title: Subscriptions API (v2 - DEPRECATED) [2021-01-22 17:35:18 -0300
 ]</div>
