--- a/OUTPUTS/viz-kundenangaben-openapi-Kundenangaben API-api.html
+++ b/OUTPUTS/viz-kundenangaben-openapi-Kundenangaben API-api.html
@@ -39,7 +39,7 @@
       <div class="col-md-6">
       <h3>API Meta data</h3>
       <div class="font-weight-bold">Source: <a href="https://github.com/europace/baufismart-kundenangaben-api.git">https://github.com/europace/baufismart-kundenangaben-api.git</a></div>
-      <div class="font-weight-bold">OAS File: kundenangaben-openapi.json</div>
+      <div class="font-weight-bold">OAS File: kundenangaben-openapi.yaml</div>
       <div class="font-weight-bold">API Title: Kundenangaben API [2021-02-01 09:40:00 +0100
 ]</div>
       
