--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <body class="container">
 
       <h1>Interactively exploring API structural changes and versioning consistency</h1>
-      In this page we present a comprehensive collection of visualization examples, including those featured in the paper, as well as additional examples that we find intriguing but were not included in the paper. For each visualization example, we provide relevant metadata related to the evolution of the subject, ssuch as number of versions and commits. Additionally, we specify the source OpenAPI Specification (OAS) used to generate the visualizations ensuring reproducibility. Each example is accompanied by its corresponding visualization, allowing readers to explore and analyze the visual representations of API evolution. 
+      In this page we present a comprehensive collection of visualization examples, including those featured in the paper, as well as additional examples that we find intriguing but were not included in the paper. For each visualization example, we provide relevant metadata related to the evolution of the subject, such as number of versions and commits. Additionally, we specify the source OpenAPI Specification (OAS) used to generate the visualizations ensuring reproducibility. Each example is accompanied by its corresponding visualization, allowing readers to explore and analyze the visual representations of API evolution. 
      <h1>Paper example</h1>
       <h3>Bmore Responsive</h3>
         <div style="display: flex;flex-direction:row;">
